--- a/Day 3/css/morecss/style.css
+++ b/Day 3/css/morecss/style.css
@@ -26,7 +26,7 @@ body{
     height: 100px;
     background-color: rgb(38, 14, 173);
     position: relative;
-    /* top: 20px; */
+    top: 20px;
 
 }
 .parent3{
