--- a/amazonUI/src/styles/navbar.css
+++ b/amazonUI/src/styles/navbar.css
@@ -13,7 +13,7 @@
 
 /* First Navbar Styles */
 #navbar {
-    background-color: #0F1111;
+    background-color: #585858;
     color: white;
     display: flex;
     padding: 1%;
